--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="container box">
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <img src="./Donuts/donut chocolates.jpg">
+            <img src="./Donuts/donut chocolates.jpg" class="img-fluid">
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <h1>Contact Us</h1>
